fix some error and adding readme.txt file

--- a/littlelemon/restaurant/templates/index.html
+++ b/littlelemon/restaurant/templates/index.html
@@ -41,9 +41,9 @@
     <nav>
       <ul>
         <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Book</a></li>
+        <li><a href="{% url 'home' %}">About</a></li>
+        <li><a href="{% url 'home' %}">Menu</a></li>
+        <li><a href="{% url 'home' %}">Book</a></li>
       </ul>
   </nav>
 <body>
